; ModuleID = '/home/carl/AnghaBench/timescaledb/tsl/src/extr_license.c_license_info_init_from_base64.c'
source_filename = "/home/carl/AnghaBench/timescaledb/tsl/src/extr_license.c_license_info_init_from_base64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@jsonb_in = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*)* @license_info_init_from_base64 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @license_info_init_from_base64(i8* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = call i8* @base64_decode(i8* %8)
  store i8* %9, i8** %6, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = icmp eq i8* %10, null
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %25

13:                                               ; preds = %2
  %14 = call i32 (...) @PG_TRY()
  %15 = load i32, i32* @jsonb_in, align 4
  %16 = load i8*, i8** %6, align 8
  %17 = call i32 @CStringGetDatum(i8* %16)
  %18 = call i32 @DirectFunctionCall1(i32 %15, i32 %17)
  store i32 %18, i32* %7, align 4
  %19 = load i32, i32* %7, align 4
  %20 = call i64 @DatumGetPointer(i32 %19)
  %21 = inttoptr i64 %20 to i32*
  %22 = load i32*, i32** %5, align 8
  %23 = call i32 @license_info_init_from_jsonb(i32* %21, i32* %22)
  %24 = call i32 (...) @PG_CATCH()
  store i32 0, i32* %3, align 4
  br label %25

25:                                               ; preds = %13, %12
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i8* @base64_decode(i8*) #1

declare dso_local i32 @PG_TRY(...) #1

declare dso_local i32 @DirectFunctionCall1(i32, i32) #1

declare dso_local i32 @CStringGetDatum(i8*) #1

declare dso_local i32 @license_info_init_from_jsonb(i32*, i32*) #1

declare dso_local i64 @DatumGetPointer(i32) #1

declare dso_local i32 @PG_CATCH(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
